# TKL-KEYBOARD

./: CMakeLists.txt  LICENSE  README.md  led.c  led.h  main.c  usb_descriptors.c
PCB/: TKL_PCB-B_Cu.gbr  TKL_PCB-B_Mask.gbr  TKL_PCB-B_Paste.gbr  TKL_PCB-B_Silkscreen.gbr  TKL_PCB-Edge_Cuts.gbr  TKL_PCB-F_Cu.gbr  TKL_PCB-F_Mask.gbr  TKL_PCB-F_Paste.gbr  TKL_PCB-F_Silkscreen.gbr  TKL_PCB-NPTH.drl  TKL_PCB-PTH.drl  TKL_PCB-bottom-pos.csv  TKL_PCB-job.gbrjob  TKL_PCB-top-pos.csv  TKL_PCB.kicad_prl  TKL_PCB.kicad_pro  TKL_PCB.kicad_sch  TKL_PCB.xml  report.txt
PCB/production/TKL_PCB_2023-12-10_19-46-34/: bom.csv  netlist.ipc  positions.csv
PCB/production/TKL_PCB_2023-12-12_14-48-18/: bom.csv  designators.csv  netlist.ipc  positions.csv
PCB/production/TKL_PCB_2023-12-12_15-03-36/: bom.csv  netlist.ipc
PCB/production/TKL_PCB_2023-12-12_20-08-00/: positions.csv
PCB/production/TKL_PCB_2023-12-12_21-02-47/: designators.csv  netlist.ipc
PCB/production/TKL_PCB_2023-12-22_14-23-20/: bom.csv  netlist.ipc
PCB/production/TKL_PCB_2024-01-18_12-58-06/: netlist.ipc  positions.csv
bin2c-v0.15.0-win32-amd64/: cat_idle.h  left_tap.h  paw_up.h  right_tap.h
source/: CMakeLists.txt  bongocat.c  bongocat.h  encoder.pio  encoder.pio.h  keyboard.c  keyboard.h  led.c  led.h  main.c  source.code-workspace
source/backup/: keyboard_v1.c  keyboard_v1.h
source/include/: usb_hid_keys.h
source/pico-ssd1306/: LICENSE
